stylesheets/style.css
* {
  box-sizing: border-box;
}
html {
  font-family: sans-serif;
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
  font-size: 10px;

  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}


header{
  display: block;
  color: black;
  background-color: white;
  top: 0px;
  position: fixed;
  z-index: 100;
  width: 100%;
}

@font-face {
  font-family: baseFont;
  src: local("Base Font"),
       local("Base Font"),
       url(fonts/MyriadPro-Regular.ttf);
  font-weight: bold;
}

body {
  margin: 0;
  overflow-x: hidden;
  font-family: baseFont,"Base Font",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 0.9;
  color: #333;
  background-color: white;

}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0px;
    margin-bottom: 0px;
    margin: 0px;
}

a{
  text-decoration: none;
  color: #333;
}


.link-category, 
.link-sub-category,
.link{
  transition: color 0.6s ease;
}

.link-category:hover,
.link-sub-category:hover,
a:hover,
.link:hover{
  color: #0071bc;
  cursor: pointer;
}

.project-text{
  padding: 10px;
}



.category-text{
  margin-top: 8px;
  margin-bottom: 15px;
  line-height: 1.2;
}

#about-photo{
  visibility: hidden;
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
  -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
  -webkit-backface-visibility: hidden; /* Fix for transition flickering */
}
#about-photo:hover {
   filter: none;
    -webkit-filter: grayscale(0%);
}

#about-text{
  visibility: hide;
}

.project-panel{
  position: absolute;
  top: 0px;
  left: 0px;
  min-height: 100%;
  width: 100%;
  background-color: white;
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 2%;
  padding-bottom: 2%;
}

.project-img{
  max-width: 100%;
  height: auto;
  display:block;
}

 .symbol-close{
    float: right;
    font-size: 7vh;
    padding-left: 20px;

 }

 #project-title{
 }


.animate-show {
  line-height: 20px;
  opacity: 1;
  padding: 10px;
  border: 1px solid black;
  background: white;
}

.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
  transition: all linear 0.5s;
}

.animate-show.ng-hide {
  line-height: 0;
  opacity: 0;
  padding: 0 10px;
}

.check-element {
  padding: 10px;
  border: 1px solid black;
  background: white;
}


/*For mobile phones: -----------------------------------------------------------------------------------------------------*/
@media only screen and (max-width: 400px) {
  .section{
      position: relative;
      min-height: 1px;
      padding-right: 15px;
      padding-left: 15px;
      text-align: right;
  }

  .project-col{
    width: 100%;
    float: left;
    padding-top: 20px;
  }

  #div-main {
    margin-top: 5%;
    display: table;
    float: right;
    margin-right: 5%;
    margin-left: 25%;
  }


  #section-categories {
    
    display: table-footer-group;
  }

  #section-about{
    display: table-header-group;
  }

  #about-fullname{
    padding-bottom: 5px;

  }

  #photo-profile {
    height: 30vh;
    padding-bottom: 20px;
   }


  #category-design{
    border-top-width: 2px;
    border-top-color: black;
    border-top-style: solid;
    padding-top: 10px;
  }


  #category-design,
  #category-engineering,
  #category-other,
  #about-photo,
  #about-fullname{
    margin-right: 0px;
  }

  h1 {
    /*font-size: 2vh;*/
    font-size: 10px;
  }

  h2 {
      /*font-size: 3vh;*/
      font-size: 15px;
  }

  h3 {
      /*font-size: 3.5vh;*/
      font-size: 22px;
  }

  h4 {
      font-size: 30px;
      /*font-size: 5vh;*/
  }

  h5 {
      font-size: 40px;
      /*font-size: 8vh;*/
  }

  h6 {
      font-size: 50px;
      /*font-size: 9vh;*/
  }

}



/*For desktop: -----------------------------------------------------------------------------------------------------*/

@media only screen and (min-width: 400px) {
   
  .container{
    overflow: hidden;
  }  

  .section{
    position: relative;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
    float: left;
    width: 50%;
    padding-bottom: 20010px;  /* X + padding-bottom */
    margin-bottom: -20000px;  /* X */
  }

  .project-col{
    max-width: 60%;
    float: left;
    padding-right: 20px;
    padding-top: 40px;
  }
  
  #div-main {
    margin-top: 5%;
  }

  #section-categories {
  text-align: right;
  border-right-width: 2px;
  border-right-color: black;
  border-right-style: solid;
  }

  #photo-profile {
  height: 192px;
  padding-bottom: 20px;
  }

  h1 {
  font-size: 1vw;
  }

  h2 {
  font-size: 1.5vw;
  }

  h3 {
    font-size: 2.5vw;
  }

  h4 {
    font-size: 5vw;
  }

  h5 {
    font-size: 7vw;
  }

  h6 {
    font-size: 8vw;
  }

  #about-photo,
  #about-fullname{
    margin-left: 0px;
    text-align: left;
  }


}

